Pages statiques ok

--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,2 +1,5 @@
-<h1>Pages#contact</h1>
-<p>Find me in app/views/pages/contact.html.erb</p>
+<h1>Bienvenue !</h1>
+<p>
+	Vous pouvez, si vous le souhaitez, <a href="mailto:mlacour@voidmaster.lautre.net">m'&eacute;crire</a>, ou bien visiter mon <a href="http://www.voidmaster.lautre.net/index.php">site web</a>.
+</p>
+
