Removed default Rails index page

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -2,5 +2,5 @@
 <p>
 	Bonjour &agrave; vous, visiteur !<br />
 	Je suis Sheo Coneau-Lacour, et ceci est la page d'informations de mon projet en Web Avanc&eacute; dans le cadre de mon Master en Informatique &agrave; Angers.<br />
-	Pour plus d'informations, rendez-vous <a href="http://forge.info.univ-angers.fr/~gh/Scripts/cc2012.php">ici</a> :)
+	Pour plus d'informations sur ce projet, rendez-vous <a href="http://forge.info.univ-angers.fr/~gh/Scripts/cc2012.php">ici</a> :)
 </p>
