--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Projet Web - Marie Sheo Coneau-Lacour | <%= @titre %></title>
+	<title><%= titre %></title>
 	<%= csrf_meta_tag %>
+	<%= render 'layouts/stylesheets' %>
 </head>
 <body>
-	<%= yield %>
+	<div class="container"> <!-- container principal du layout -->
+		<%= render 'layouts/header' %>
+		<section class="round">
+			<%= yield %>
+		</section>
+		<%= render 'layouts/footer' %>
+	</div>
 </body>
 </html>
 
