--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,6 +1,5 @@
-<h1>Bienvenue !</h1>
+<h1>&Agrave; propos</h1>
 <p>
-	Bonjour &agrave; vous, visiteur !<br />
-	Je suis Sheo Coneau-Lacour, et ceci est la page d'informations de mon projet en Web Avanc&eacute; dans le cadre de mon Master en Informatique &agrave; Angers.<br />
-	Pour plus d'informations sur ce projet, rendez-vous <a href="http://forge.info.univ-angers.fr/~gh/Scripts/cc2012.php">ici</a> :)
+	Je suis Sheo Coneau-Lacour, &eacute;tudiante en Master 1 &agrave; l'Universit&eacute; d'Angers.<br />
+	Ceci est la page d'informations de mon projet en Web Avanc&eacute; dont le sujet est disponible <a href="http://forge.info.univ-angers.fr/~gh/Scripts/cc2012.php">ici</a> :)
 </p>
