--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,4 +1,4 @@
-<h1>Bienvenue !</h1>
+<h1>Contact</h1>
 <p>
 	Vous pouvez, si vous le souhaitez, <a href="mailto:mlacour@voidmaster.lautre.net">m'&eacute;crire</a>, ou bien visiter mon <a href="http://www.voidmaster.lautre.net/index.php">site web</a>.
 </p>
