fin du layout et des routages pr users

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -9,7 +9,7 @@ body
 @font-face
 {
 	font-family: 'Ubuntu';
-	src: url('fonts/Ubuntu-Light.ttf') format('truetype');
+	src: font-url('Ubuntu-Light.ttf') format('truetype');
 	font-weight: normal;
 	font-style: normal;
 }
