--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,5 +2,5 @@
 <p>
 	Ce petit site enti&egrave;rement d&eacute;velopp&eacute; avec Ruby On Rails permet &agrave; des utilisateurs de s'inscrire afin de profiter de quelques fonctionnalit&eacute;s telles que l'affichage de leur IMC et de leur poids id&eacute;al, ou encore le d&eacute;p&ocirc;t de CV (consultable par tous).
 </p>
-<%= link_to "S'inscrire !", '#', :class => "signup_button round" %>
+<%= link_to "S'inscrire !", signup_path, :class => "signup_button round" %>
 
