--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,11 +1,10 @@
 <header>
-	<% logo = image_tag("logo.png", :alt => "Projet Web Sheo", :class => "round") %>
 	<%= link_to logo, root_path %>
 	<nav class="round">
 		<ul>
 			<li><%= link_to "Accueil", root_path %></li>
 			<li><%= link_to "Aide", help_path %></li>
-			<li><%= link_to "S'identifier", '#' %></li>
+			<li><%= link_to "Connexion", '#' %></li>
 		</ul>
 	</nav>
 </header>
