--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -148,3 +148,47 @@ footer nav
 	float: none;
 }
 
+/* User show page */
+
+table.profile
+{
+	width: 100%;
+	margin-bottom: 0;
+}
+
+td.main
+{
+	width: 70%;
+	padding: 1em;
+}
+
+td.sidebar
+{
+	width: 30%;
+	padding: 1em;
+	vertical-align: top;
+	background: #7e7575;
+}
+
+.sidebar a
+{
+	color: #83ff4d;
+}
+
+.sidebar a:hover
+{
+	color: white;
+	text-decoration: underline;
+}
+
+.sidebar a:visited
+{
+	color: #006400;
+}
+
+.profile img.gravatar
+{
+	border: 1px solid #999;
+	margin-bottom: -15px;
+}
+
